--- a/online-consultations.html
+++ b/online-consultations.html
@@ -39,7 +39,7 @@
 
     <section class="wrapper intro">
       <p class="intro__text u-margin__top--large">
-        These technologies makes it easier for you to fit the time in to attend the appointment and to reduce travel time and therapy fees. 
+        Choose flexibility - access our services from the comfort and privacy of your home! 
       </p>
   </section>
     
@@ -95,6 +95,9 @@
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
             <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact us</h3>
+            <p class="u-margin__bottom--medium">
+                1 Linden Tree Way Cranbourne North, VIC 3977
+            </p>
             <p class="contact__text">
                 Please give us a call, send an email or use the contact form below to get in touch.
             </p>
@@ -154,7 +157,7 @@
             </div>
 
             <div class="footer__item">
-                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
