--- a/privacy.html
+++ b/privacy.html
@@ -66,6 +66,9 @@
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
             <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact us</h3>
+            <p class="u-margin__bottom--medium">
+                1 Linden Tree Way Cranbourne North, VIC 3977
+            </p>
             <p class="contact__text">
                 Please give us a call, send an email or use the contact form below to get in touch.
             </p>
@@ -125,7 +128,7 @@
             </div>
 
             <div class="footer__item">
-                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
