--- a/psychological-services.html
+++ b/psychological-services.html
@@ -99,9 +99,9 @@
     </p>
     <ul class="u-margin__bottom--medium">
         <li>Clients with a <strong>Mental Health Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
-        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
+        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly) </li>
         <li>Under the Medicare system, you must have a <strong>review with the referre</strong>r after the first six sessions to continue receiving the rebate for the final four sessions</li>
-        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income.</li>
+        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income</li>
         <li>Please note that <strong>bulk-billing spaces are limited;</strong> please enquire when the next appointments are available.</li>
     </ul>
     <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Enquire now</a>
@@ -118,6 +118,9 @@
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
             <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact us</h3>
+            <p class="u-margin__bottom--medium">
+                1 Linden Tree Way Cranbourne North, VIC 3977
+            </p>
             <p class="contact__text">
                 Please give us a call, send an email or use the contact form below to get in touch.
             </p>
@@ -177,7 +180,7 @@
             </div>
 
             <div class="footer__item">
-                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
