--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -48,7 +48,7 @@
         <h3 class="featured__title u-margin__bottom--small">
             REFERRAL PATHWAYS AND ASSESSMENT PROCESS
         </h3>
-        <p class="u-margin__bottom--small">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
+        <p class="u-margin__bottom--small">You can refer yourself to the MSUPC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
         <p class="u-margin__bottom--small">Your treatment at our clinic starts with an <strong>initial consultation.</strong>
         </p>
         <p class="u-margin__bottom--small">The purpose of the initial consultation is to assess your specific treatment needs and determine whether our treatment programs are able to meet these.</p>
@@ -64,6 +64,9 @@
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
             <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact us</h3>
+            <p class="u-margin__bottom--medium">
+                1 Linden Tree Way Cranbourne North, VIC 3977
+            </p>
             <p class="contact__text">
                 Please give us a call, send an email or use the contact form below to get in touch.
             </p>
@@ -123,7 +126,7 @@
             </div>
 
             <div class="footer__item">
-                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
