--- a/privacy.html
+++ b/privacy.html
@@ -48,17 +48,17 @@
         <h3 class="featured__title u-margin__bottom--small">
             PRIVACY AND CONFIDENTIALITY
         </h3>
-        <p class="u-margin__bottom--small">The service provided at MSUPC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
+        <p class="u-margin__bottom--small">The service provided by MSUPC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
         <p class="u-margin__bottom--small">As part of providing services to you, our clinicians will need to collect and record your personal information. Most information will be held in a secure online platform used by health professionals (for billing, contact information and case notes). 
             All information within this online platform is password protected, secure, and encrypted and all hard copy information will be kept in a locked filing cabinet in a locked office in a secure building to ensure your privacy.
             </p>
-            <p class="u-margin__bottom--small">At any stage clients may request to access the information recorded by the clinician. Your clinician may discuss the contents with them and/or give them a copy.  
+            <p class="u-margin__bottom--small">At any stage clients may request to access the information recorded by the clinician. 
                 All requests by clients for access to information held about them should be lodged with their allocated clinician at the clinic. These requests will be responded to within 10 days.
                  </p>
         <p class="u-margin__bottom--small"><strong>All personal information</strong> gathered by our clinic <strong>is confidential</strong> – except in the following circumstances:</p>
         <ul>
             <li><strong>Your information</strong> is subpoenaed by the court, and/or</li>
-            <li><strong>Failure to disclose</strong> the information would place you or another person at risk; and/or:</li>
+            <li><strong>Failure to disclose</strong> the information would place you or another person at risk; and/or</li>
             <li><strong>Your prior approval</strong> has been obtained to provide a written report to another professional or agency, e.g. a GP or a lawyer or to discuss the material with another person, e.g. a parent or employer.</li>
         </ul>
     </section>
@@ -128,7 +128,7 @@
             </div>
 
             <div class="footer__item">
-                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/" aria-label="MSUPC homepage"><img src="img/MSUPC-logo-version-WHITE-02.svg" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
