--- a/psychological-services.html
+++ b/psychological-services.html
@@ -98,7 +98,7 @@
     <p class="u-margin__bottom--small">A referral under the Medicare system entitles you for <strong>up to 10 'rebated' counselling sessions per calendar year</strong> (please have your GP complete the referral specifically to your allocated clinician at the Melbourne Substance Use and Psychology Clinic). 
     </p>
     <ul class="u-margin__bottom--medium">
-        <li>Clients with a <strong>Mental Health Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
+        <li>Clients with a <strong>Mental Health Care Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
         <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly) </li>
         <li>Under the Medicare system, you must have a <strong>review with the referre</strong>r after the first six sessions to continue receiving the rebate for the final four sessions</li>
         <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income</li>
