--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Melbourne Substance Use and Psychology Clinic</title>
+    <title>Melbourne Substance Use and Psychology Clinic 2021</title>
 </head>
 <body>
     <header class="header">
